--- a/README
+++ b/README
@@ -1,1 +1,18 @@
 此仓库代码用于将数据集转为voc格式，其中用武汉大学的dota数据集作为测试
+DOTA_obb.py用于将dota的txt格式数据集转换为obb的voc格式
+Pxml.py建立每个类别的索引文件，每种类别的索引文件中，一张图片只重复一次
+clean_txt.py清除对应文件夹下所有文件内容
+trainnum.py将训练集的标注文件名存放到train.txt索引文件
+valnum.py将评估集的标注文件名存放到val.txt索引文件
+testnum.py将评估集的标注文件名存放到test.txt索引文件
+txt1+txt2Totxt3.py将两个txt文件的内容合并到另外一个文件
+使用：
+先将数据集的标注文件分成train，val，test三个部分数据集
+每一部分数据集都建立索引文件，索引文件包括每个类别的索引文件，如"plane_train.txt"，"plane_val.txt","plane_test.txt"，"plane_trainval.txt"，三个部分数据集的索引文件，如"train.txt"
+使用DOTA_obb.py将标注文件转为xml格式。
+使用Pxml.py将部分数据集中的每个类别建立索引
+使用trainnum.py建立训练集的索引文件
+使用valnum.py建立评估集的索引文件
+使用testnum.py建立测试集的索引文件
+使用txt1+txt2Totxt3.py将每一类别的训练集索引文件和评估集索引文件合并到"类别名_trainval.txt"
+使用txt1+txt2Totxt3.py将训练集索引文件和评估集索引文件合并到"trainval.txt"
